k8s/api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: my-app
  labels:
    app: api
  name: api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
        - image: flavienb/reactjs-flask-ldap-boilerplate-api:latest
          name: api
          ports:
            - containerPort: 5000
          imagePullPolicy: Always
          volumeMounts:
            - mountPath: /logs
              name: api-logs-pvc
            - mountPath: /migrations
              subPath: migrations # https://stackoverflow.com/a/51174380/4958081
              name: api-migrations-pvc
          resources: {}
      volumes:
        - name: api-logs-pvc
          persistentVolumeClaim:
            claimName: api-logs-pvc
        - name: api-migrations-pvc
          persistentVolumeClaim:
            claimName: api-migrations-pvc
      restartPolicy: Always
status: {}
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: api
  namespace: my-app
  name: api
spec:
  ports:
    - port: 5000
      targetPort: 5000
  selector:
    app: api
status:
  loadBalancer: {}
