k8s/database.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: my-app
  labels:
    app: database
  name: database
spec:
  replicas: 1
  selector:
    matchLabels:
      app: database
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: database
    spec:
      containers:
        - image: postgres:12.2-alpine
          name: database
          ports:
            - containerPort: 5432
          imagePullPolicy: Always
          resources: {}
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: database-pvc
      restartPolicy: Always
      volumes:
        - name: database-pvc
          persistentVolumeClaim:
            claimName: database-pvc
status: {}
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: database
  namespace: my-app
  name: database
spec:
  ports:
    - port: 5432
      targetPort: 5432
  selector:
    # Looks for labels `app:database` in the namespace and applies the spec
    app: database
